--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,7 @@
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
-        "16": "icons/icon-16.png",
-        "48": "icons/icon-48.png",
-        "128": "icons/icon-128.png"
+        "128": "icons/key.png"
       }
     },
     "web_accessible_resources": [
