--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Passphrase Generator",
+    "name": "Simple Passphrase/Password Generator",
     "version": "1.1",
-    "description": "Génère des passphrases personnalisées.",
+    "description": "Génère des passphrases et mot de passe personnalisées.",
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
