--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,23 @@
 {
-    "manifest_version": 3,
-    "name": "Simple Passphrase/Password Generator",
-    "version": "1.1",
-    "description": "Génère des passphrases et mot de passe personnalisées.",
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "128": "icons/key.png"
-      }
-    },
-    "web_accessible_resources": [
-      {
-        "resources": ["wordlist.txt"],
-        "matches": ["<all_urls>"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "Simple Passphrase/Password Generator",
+  "version": "1.1",
+  "description": "Génère des passphrases et mot de passe personnalisées.",
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "128": "icons/key.png"
+    }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["wordlist.txt"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "titiuv@proton.me"
+    }
   }
-  
+}
